--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "test": "karma start",
     "ci": "npm run e2e:jit && npm run test:once:ci",
     "ci:testall": "npm run e2e:testall && npm run test:once:ci",
-    "tslint": "tslint",
+    "tslint": "node node_modules/tslint/bin/tslint",
     "lint": "npm run tslint \"src/app/**/*.ts\" ",
     "clean": "npm cache clean && npm run clean:compile && npm run rimraf -- node_modules doc typings coverage dist .awcache dll",
     "clean:dist": "npm run rimraf -- dist .awcache",
@@ -90,16 +90,16 @@
     "universal:watch": "npm run build:universal && npm-run-all -p -r watch:universal server:universal"
   },
   "dependencies": {
-    "@angular/common": "2.1.0",
-    "@angular/compiler": "2.1.0",
-    "@angular/compiler-cli": "2.1.0",
-    "@angular/core": "2.1.0",
-    "@angular/forms": "2.1.0",
-    "@angular/http": "2.1.0",
+    "@angular/common": "2.3.1",
+    "@angular/compiler": "2.3.1",
+    "@angular/compiler-cli": "2.3.1",
+    "@angular/core": "2.3.1",
+    "@angular/forms": "2.3.1",
+    "@angular/http": "2.3.1",
     "@angular/material": "2.0.0-alpha.11-3",
-    "@angular/platform-browser": "2.1.0",
-    "@angular/platform-browser-dynamic": "2.1.0",
-    "@angular/platform-server": "2.1.0",
+    "@angular/platform-browser": "2.3.1",
+    "@angular/platform-browser-dynamic": "2.3.1",
+    "@angular/platform-server": "2.3.1",
     "@angular/router": "3.1.0",
     "@angular/tsc-wrapped": "0.3.0",
     "@angularclass/hmr": "1.2.2",
@@ -144,7 +144,7 @@
     "angular-router-loader": "~0.5.0",
     "angular2-template-loader": "~0.6.0",
     "awesome-typescript-loader": "~3.0.0-beta.17",
-    "codelyzer": "~1.0.0-beta.4",
+    "codelyzer": "^2.0.1",
     "compression-webpack-plugin": "~0.3.1",
     "copy-webpack-plugin": "~4.0.0",
     "css-loader": "~0.26.0",
@@ -177,8 +177,8 @@
     "to-string-loader": "~1.1.5",
     "ts-helpers": "~1.1.1",
     "ts-node": "~2.0.0",
-    "tslint": "~4.1.1",
-    "tslint-loader": "~3.3.0",
+    "tslint": "^4.4.2",
+    "tslint-loader": "^3.4.2",
     "typescript": "~2.0.10",
     "watch-run": "~1.2.4",
     "webpack": "2.2.0-rc.3",
