--- a/package.json
+++ b/package.json
@@ -90,17 +90,16 @@
     "universal:watch": "npm run build:universal && npm-run-all -p -r watch:universal server:universal"
   },
   "dependencies": {
-    "@angular/common": "2.3.1",
-    "@angular/compiler": "2.3.1",
-    "@angular/compiler-cli": "2.3.1",
-    "@angular/core": "2.3.1",
-    "@angular/forms": "2.3.1",
-    "@angular/http": "2.3.1",
-    "@angular/material": "2.0.0-alpha.11-3",
-    "@angular/platform-browser": "2.3.1",
-    "@angular/platform-browser-dynamic": "2.3.1",
-    "@angular/platform-server": "2.3.1",
-    "@angular/router": "3.1.0",
+    "@angular/common": "2.4.6",
+    "@angular/compiler": "2.4.6",
+    "@angular/core": "2.4.6",
+    "@angular/forms": "2.4.6",
+    "@angular/http": "2.4.6",
+    "@angular/material": "*",
+    "@angular/platform-browser": "2.4.6",
+    "@angular/platform-browser-dynamic": "2.4.6",
+    "@angular/platform-server": "2.4.6",
+    "@angular/router": "3.4.6",
     "@angular/tsc-wrapped": "0.3.0",
     "@angularclass/hmr": "1.2.2",
     "@angularclass/hmr-loader": "3.0.2",
@@ -128,6 +127,7 @@
     "zone.js": "0.6.26"
   },
   "devDependencies": {
+    "@angular/compiler-cli": "2.4.6",
     "@types/body-parser": "~0.0.33",
     "@types/compression": "~0.0.33",
     "@types/cookie-parser": "~1.3.30",
