--- a/tsconfig.aot.json
+++ b/tsconfig.aot.json
@@ -22,7 +22,7 @@
     "e2e/**/*.ts",
     "src/**/*.e2e.ts",
     "src/**/*.spec.ts",
-    "src/server.ts",
+    "src/server/server.ts",
     "src/main.browser.aot.ts",
     "src/main.browser.universal.ts",
     "src/main.browser.universal.aot.ts",
