Refactoring done, updating angular package

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "e2e:only:universal": "npm run protractor -- --universal",
     "e2e:only": "npm run protractor",
     "e2e:live": "npm run e2e -- --elementExplorer",
-    "e2e:server": "node prodserver",
+    "e2e:server": "node src/server/server.prod",
     "pretest": "npm run lint && npm run sass",
     "pretest:once": "npm run lint && npm run sass",
     "pretest:once:ci": "npm run lint",
@@ -52,17 +52,17 @@
     "compile:dev": "npm run sass && npm run clean:compile && npm run ngc && npm run build:aot:dev",
     "compile:only": "npm run clean:compile && npm run sass && npm run ngc",
     "compile:watch": "watch-run -i npm run compile:only -p 'src/app/**/*.ts, src/app/**/*.scss' npm run compile:only",
-    "prodserver": "node prodserver",
+    "prodserver": "node src/server/server.prod",
     "sass": "node-sass src -o src --include-path node_modules --output-style compressed -q",
     "sass:watch": "node-sass -w src -o src --include-path node_modules --output-style compressed -q",
     "start": "npm run server:dev",
     "start:hmr": "npm run server:hmr",
-    "serve80": "sudo PORT=80 node prodserver",
+    "serve80": "sudo PORT=80 node src/server/prodserver.prod",
     "server:dev": "npm-run-all -p -r webdev sass:watch",
     "server:hmr": "npm-run-all -p -r webdev:hmr sass:watch",
-    "server:prod": "npm-run-all -p -r watch:prod prodserver",
+    "server:prod": "npm-run-all -p -r watch:prod src/server/server.prod",
     "server:prod80": "npm-run-all -p -r serve80 watch:prod",
-    "server:universal": "nodemon dist/server/index.js",
+    "server:universal": "nodemon --watch dist --exec dist/server/index.js",
     "debug:build": "node-nightly --inspect --debug-brk node_modules/webpack/bin/webpack.js",
     "build": "npm run build:prod",
     "build:aot": "npm run build:aot:prod",
@@ -108,22 +108,22 @@
     "@ngrx/effects": "2.0.0",
     "@ngrx/router-store": "1.2.5",
     "@ngrx/store": "2.2.1",
-    "@ngrx/store-devtools": "3.2.2",
+    "@ngrx/store-devtools": "3.2.3",
     "@ngrx/store-log-monitor": "3.0.2",
     "angular2-express-engine": "2.1.0-rc.1",
     "angular2-platform-node": "2.1.0-rc.1",
     "angular2-universal": "2.1.0-rc.1",
     "angular2-universal-polyfills": "2.1.0-rc.1",
-    "body-parser": "1.15.2",
+    "body-parser": "1.16.1",
     "compression": "1.6.2",
     "cookie-parser": "1.4.3",
     "core-js": "2.4.1",
-    "express": "4.14.0",
+    "express": "4.14.1",
     "hammerjs": "~2.0.8",
     "methods": "1.1.2",
-    "ngrx-store-freeze": "0.1.6",
+    "ngrx-store-freeze": "0.1.9",
     "ngrx-store-logger": "0.1.7",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.2.0",
     "zone.js": "0.6.26"
   },
   "devDependencies": {
