--- a/package.json
+++ b/package.json
@@ -90,17 +90,17 @@
     "universal:watch": "npm run build:universal && npm-run-all -p -r watch:universal server:universal"
   },
   "dependencies": {
-    "@angular/common": "2.4.6",
-    "@angular/compiler": "2.4.6",
-    "@angular/core": "2.4.6",
-    "@angular/forms": "2.4.6",
-    "@angular/http": "2.4.6",
-    "@angular/material": "*",
-    "@angular/platform-browser": "2.4.6",
-    "@angular/platform-browser-dynamic": "2.4.6",
-    "@angular/platform-server": "2.4.6",
-    "@angular/router": "3.4.6",
-    "@angular/tsc-wrapped": "0.3.0",
+    "@angular/common": "2.4.8",
+    "@angular/compiler": "2.4.8",
+    "@angular/core": "2.4.8",
+    "@angular/forms": "2.4.8",
+    "@angular/http": "2.4.8",
+    "@angular/material": "2.0.0-beta.2",
+    "@angular/platform-browser": "2.4.8",
+    "@angular/platform-browser-dynamic": "2.4.8",
+    "@angular/platform-server": "2.4.8",
+    "@angular/router": "3.4.8",
+    "@angular/tsc-wrapped": "0.5.2",
     "@angularclass/hmr": "1.2.2",
     "@angularclass/hmr-loader": "3.0.2",
     "@angularclass/idle-preload": "^1.0.4",
@@ -127,7 +127,7 @@
     "zone.js": "0.6.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "2.4.6",
+    "@angular/compiler-cli": "2.4.8",
     "@types/body-parser": "~0.0.33",
     "@types/compression": "~0.0.33",
     "@types/cookie-parser": "~1.3.30",
@@ -171,12 +171,12 @@
     "phantomjs-prebuilt": "~2.1.13",
     "protractor": "~4.0.8",
     "raw-loader": "~0.5.1",
-    "rimraf": "~2.5.4",
+    "rimraf": "~2.6.1",
     "source-map-loader": "~0.1.5",
     "string-replace-loader": "~1.0.5",
     "to-string-loader": "~1.1.5",
     "ts-helpers": "~1.1.1",
-    "ts-node": "~2.0.0",
+    "ts-node": "~2.1.0",
     "tslint": "^4.4.2",
     "tslint-loader": "^3.4.2",
     "typescript": "~2.0.10",
