--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "compile:only": "npm run clean:compile && npm run sass && npm run ngc",
     "compile:watch": "watch-run -i npm run compile:only -p 'src/app/**/*.ts, src/app/**/*.scss' npm run compile:only",
     "prodserver": "node src/server/server.prod",
-    "sass": "node-sass src -o src --include-path node_modules --output-style compressed -q",
-    "sass:watch": "node-sass -w src -o src --include-path node_modules --output-style compressed",
+    "sass": "node-sass src/app/theme -o src/assets/css --include-path node_modules --output-style compressed -q",
+    "sass:watch": "node-sass -w src/app/theme -o src/assets/css --include-path node_modules --output-style compressed -q",
     "start": "npm run server:dev",
     "start:hmr": "npm run server:hmr",
     "serve80": "sudo PORT=80 node src/server/prodserver.prod",
@@ -124,7 +124,7 @@
     "ngrx-store-freeze": "0.1.9",
     "ngrx-store-logger": "0.1.7",
     "rxjs": "5.2.0",
-    "zone.js": "0.6.26"
+    "zone.js": "0.7.7"
   },
   "devDependencies": {
     "@angular/compiler-cli": "2.4.8",
@@ -138,8 +138,8 @@
     "@types/ip": "~0.0.29",
     "@types/jasmine": "2.5.41",
     "@types/mime": "~0.0.29",
-    "@types/node": "~6.0.52",
-    "@types/selenium-webdriver": "~2.44.29",
+    "@types/node": "~7.0.5",
+    "@types/selenium-webdriver": "~2.53.40",
     "@types/serve-static": "~1.7.31",
     "angular-router-loader": "~0.5.0",
     "angular2-template-loader": "~0.6.0",
@@ -147,15 +147,15 @@
     "codelyzer": "^2.0.1",
     "compression-webpack-plugin": "~0.3.1",
     "copy-webpack-plugin": "~4.0.0",
-    "css-loader": "~0.26.0",
+    "css-loader": "~0.26.2",
     "es6-promise": "~4.0.5",
     "es6-promise-loader": "~1.0.2",
-    "html-webpack-plugin": "~2.26.0",
-    "imports-loader": "~0.7.0",
+    "html-webpack-plugin": "~2.28.0",
+    "imports-loader": "~0.7.1",
     "ip": "~1.1.3",
-    "istanbul-instrumenter-loader": "~0.2.0",
+    "istanbul-instrumenter-loader": "~2.0.0",
     "json-loader": "~0.5.4",
-    "karma": "~1.3.0",
+    "karma": "~1.5.0",
     "karma-chrome-launcher": "~2.0.0",
     "karma-coverage": "~1.1.1",
     "karma-jasmine": "~1.1.0",
@@ -163,13 +163,13 @@
     "karma-phantomjs-launcher": "~1.0.2",
     "karma-remap-coverage": "~0.1.4",
     "karma-sourcemap-loader": "~0.3.7",
-    "karma-webpack": "~1.8.0",
-    "node-sass": "~4.2.0",
+    "karma-webpack": "~2.0.2",
+    "node-sass": "~4.5.0",
     "nodemon": "~1.11.0",
     "npm-run-all": "~4.0.0",
     "phantomjs-polyfill": "~0.0.2",
     "phantomjs-prebuilt": "~2.1.13",
-    "protractor": "~4.0.8",
+    "protractor": "~5.1.1",
     "raw-loader": "~0.5.1",
     "rimraf": "~2.6.1",
     "source-map-loader": "~0.1.5",
@@ -181,11 +181,11 @@
     "tslint-loader": "^3.4.2",
     "typescript": "~2.0.10",
     "watch-run": "~1.2.4",
-    "webpack": "2.2.0-rc.3",
+    "webpack": "2.2.1",
     "webpack-bundle-analyzer": "^2.1.1",
-    "webpack-dev-middleware": "~1.9.0",
-    "webpack-dev-server": "2.2.0-rc.0",
-    "webpack-merge": "~1.1.2"
+    "webpack-dev-middleware": "~1.10.1",
+    "webpack-dev-server": "2.4.1",
+    "webpack-merge": "~3.0.0"
   },
   "license": "MIT",
   "bugs": {
