--- a/package.json
+++ b/package.json
@@ -136,7 +136,7 @@
     "@types/express-serve-static-core": "~4.0.37",
     "@types/hammerjs": "~2.0.33",
     "@types/ip": "~0.0.29",
-    "@types/jasmine": "2.5.41",
+    "@types/jasmine": "2.5.43",
     "@types/mime": "~0.0.29",
     "@types/node": "~7.0.5",
     "@types/selenium-webdriver": "~2.53.40",
@@ -179,7 +179,7 @@
     "ts-node": "~2.1.0",
     "tslint": "^4.4.2",
     "tslint-loader": "^3.4.2",
-    "typescript": "~2.0.10",
+    "typescript": "2.2.1",
     "watch-run": "~1.2.4",
     "webpack": "2.2.1",
     "webpack-bundle-analyzer": "^2.1.1",
