--- a/package.json
+++ b/package.json
@@ -90,16 +90,17 @@
     "universal:watch": "npm run build:universal && npm-run-all -p -r watch:universal server:universal"
   },
   "dependencies": {
-    "@angular/common": "2.4.8",
-    "@angular/compiler": "2.4.8",
-    "@angular/core": "2.4.8",
-    "@angular/forms": "2.4.8",
-    "@angular/http": "2.4.8",
-    "@angular/material": "2.0.0-beta.2",
-    "@angular/platform-browser": "2.4.8",
-    "@angular/platform-browser-dynamic": "2.4.8",
-    "@angular/platform-server": "2.4.8",
-    "@angular/router": "3.4.8",
+    "@angular/common": "4.0.0-rc.1",
+    "@angular/compiler": "4.0.0-rc.1",
+    "@angular/compiler-cli": "4.0.0-rc.1",    
+    "@angular/core": "4.0.0-rc.1",
+    "@angular/forms": "4.0.0-rc.1",
+    "@angular/http": "4.0.0-rc.1",
+    "@angular/platform-browser": "4.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "4.0.0-rc.1",
+    "@angular/platform-server": "4.0.0-rc.1",
+    "@angular/router": "4.0.0-rc.1",
+    "@angular/material": "2.0.0-beta.2",    
     "@angular/tsc-wrapped": "0.5.2",
     "@angularclass/hmr": "1.2.2",
     "@angularclass/hmr-loader": "3.0.2",
@@ -127,7 +128,6 @@
     "zone.js": "0.7.7"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "2.4.8",
     "@types/body-parser": "~0.0.33",
     "@types/compression": "~0.0.33",
     "@types/cookie-parser": "~1.3.30",
