--- a/package.json
+++ b/package.json
@@ -92,15 +92,15 @@
   "dependencies": {
     "@angular/common": "4.0.0-rc.1",
     "@angular/compiler": "4.0.0-rc.1",
-    "@angular/compiler-cli": "4.0.0-rc.1",    
+    "@angular/compiler-cli": "4.0.0-rc.1",
     "@angular/core": "4.0.0-rc.1",
     "@angular/forms": "4.0.0-rc.1",
     "@angular/http": "4.0.0-rc.1",
+    "@angular/material": "2.0.0-beta.2",
     "@angular/platform-browser": "4.0.0-rc.1",
     "@angular/platform-browser-dynamic": "4.0.0-rc.1",
     "@angular/platform-server": "4.0.0-rc.1",
     "@angular/router": "4.0.0-rc.1",
-    "@angular/material": "2.0.0-beta.2",    
     "@angular/tsc-wrapped": "0.5.2",
     "@angularclass/hmr": "1.2.2",
     "@angularclass/hmr-loader": "3.0.2",
@@ -121,6 +121,8 @@
     "core-js": "2.4.1",
     "express": "4.14.1",
     "hammerjs": "~2.0.8",
+    "ionic-angular": "^2.1.0",
+    "ionicons": "^3.0.0",
     "methods": "1.1.2",
     "ngrx-store-freeze": "0.1.9",
     "ngrx-store-logger": "0.1.7",
