--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "clean:dist": "npm run rimraf -- dist .awcache",
     "clean:dll": "npm run rimraf -- dll",
     "clean:compile": "npm run rimraf -- \"compiled\" ",
+    "clean:cordova": "npm run rimraf -- cordova/www",    
     "compile": "npm run compile:aot",
     "compile:aot": "npm run sass && npm run clean:compile && npm run ngc && npm run build:aot",
     "compile:e2e": "npm run sass && npm run clean:compile && npm run ngc && npm run build:aot:prod:e2e",
@@ -52,7 +53,6 @@
     "compile:dev": "npm run sass && npm run clean:compile && npm run ngc && npm run build:aot:dev",
     "compile:only": "npm run clean:compile && npm run sass && npm run ngc",
     "compile:watch": "watch-run -i npm run compile:only -p 'src/app/**/*.ts, src/app/**/*.scss' npm run compile:only",
-    "prodserver": "node src/server/server.prod",
     "sass": "node-sass src/app/theme -o src/assets/css --include-path node_modules --output-style compressed -q",
     "sass:watch": "node-sass -w src/app/theme -o src/assets/css --include-path node_modules --output-style compressed -q",
     "start": "npm run server:dev",
@@ -60,11 +60,13 @@
     "serve80": "sudo PORT=80 node src/server/prodserver.prod",
     "server:dev": "npm-run-all -p -r webdev sass:watch",
     "server:hmr": "npm-run-all -p -r webdev:hmr sass:watch",
-    "server:prod": "npm-run-all -p -r watch:prod src/server/server.prod",
+    "server:prod": "npm-run-all -p -r watch:prod prodserver",
     "server:prod80": "npm-run-all -p -r serve80 watch:prod",
     "server:universal": "nodemon --watch dist --exec node dist/server/index.js",
+    "prodserver": "node src/server/server.prod",
     "debug:build": "node-nightly --inspect --debug-brk node_modules/webpack/bin/webpack.js",
     "build": "npm run build:prod",
+    "build:cordova": "npm run clean:cordova && npm run sass && webpack",
     "build:aot": "npm run build:aot:prod",
     "build:aot:prod": "npm run clean:dist && npm run sass && webpack",
     "build:aot:prod:e2e": "npm run clean:dist && npm run sass && webpack",
