Fontcopy script added to build

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "url": "git+https://github.com/kemalcany/kitecs-angular-starter.git"
   },
   "scripts": {
-    "postinstall": "node build/generate-ionic-scss-imports.js && npm run sass && npm run build:dll",
+    "postinstall": "npm run postinstall:ionic && npm run sass && npm run build:dll",
+    "postinstall:ionic": "node build/generate-ionic-scss-imports.js && node build/copy-ionicons-fonts.js",
     "rimraf": "rimraf",
     "webdev": "webpack-dev-server",
     "webdev:hmr": "npm run webdev -- --inline --hot",
@@ -53,8 +54,8 @@
     "compile:dev": "npm run sass && npm run clean:compile && npm run ngc && npm run build:aot:dev",
     "compile:only": "npm run clean:compile && npm run sass && npm run ngc",
     "compile:watch": "watch-run -i npm run compile:only -p 'src/app/**/*.ts, src/app/**/*.scss' npm run compile:only",
-    "sass": "node-sass src/app/theme -o src/assets/css --include-path node_modules --output-style compressed -q",
-    "sass:watch": "node-sass -w src/app/theme -o src/assets/css --include-path node_modules --output-style compressed -q",
+    "sass": "node-sass src/app/theme -o src/assets/css --include-path node_modules --output-style compressed",
+    "sass:watch": "node-sass -w src/app/theme -o src/assets/css --include-path node_modules --output-style compressed",
     "start": "npm run server:dev",
     "start:hmr": "npm run server:hmr",
     "serve80": "sudo PORT=80 node src/server/prodserver.prod",
@@ -151,8 +152,10 @@
     "awesome-typescript-loader": "~3.0.0-beta.17",
     "codelyzer": "^2.0.1",
     "compression-webpack-plugin": "~0.3.1",
+    "copy-dir": "^0.3.0",
     "copy-webpack-plugin": "~4.0.0",
     "css-loader": "~0.26.2",
+    "del": "^2.2.2",
     "es6-promise": "~4.0.5",
     "es6-promise-loader": "~1.0.2",
     "file-loader": "^0.10.1",
