--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "url": "git+https://github.com/kemalcany/kitecs-angular-starter.git"
   },
   "scripts": {
-    "postinstall": "npm run postinstall:ionic && npm run sass && npm run build:dll && npm run postinstall:cordova",
-    "postinstall:ionic": "node build/generate-ionic-scss-imports.js && node build/copy-ionicons-fonts.js",
-    "postinstall:cordova": "cordova create cordova",
+    "postinstall": "npm run sass && npm run build:dll && node build/_postinstall",
     "rimraf": "rimraf",
     "webdev": "webpack-dev-server",
     "webdev:hmr": "npm run webdev -- --inline --hot",
@@ -42,7 +40,7 @@
     "ci:testall": "npm run e2e:testall && npm run test:once:ci",
     "tslint": "node node_modules/tslint/bin/tslint",
     "lint": "npm run tslint \"src/app/**/*.ts\" ",
-    "clean": "npm cache clean && npm run clean:compile && npm run rimraf -- node_modules doc typings coverage dist .awcache dll",
+    "clean": "npm cache clean && npm run clean:compile && npm run rimraf -- doc typings cordova coverage dist .awcache dll",
     "clean:dist": "npm run rimraf -- dist .awcache",
     "clean:dll": "npm run rimraf -- dll",
     "clean:compile": "npm run rimraf -- \"compiled\" ",
@@ -153,13 +151,14 @@
     "awesome-typescript-loader": "~3.0.0-beta.17",
     "codelyzer": "^2.0.1",
     "compression-webpack-plugin": "~0.3.1",
-    "copy-dir": "^0.3.0",
     "copy-webpack-plugin": "~4.0.0",
+    "cordova": "^6.5.0",
     "css-loader": "~0.26.2",
-    "del": "^2.2.2",
     "es6-promise": "~4.0.5",
     "es6-promise-loader": "~1.0.2",
     "file-loader": "^0.10.1",
+    "fs-extra": "^2.0.0",
+    "fs-promise": "^2.0.0",
     "html-webpack-plugin": "~2.28.0",
     "imports-loader": "~0.7.1",
     "ip": "~1.1.3",
