--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "kitecs-angular-starter",
+  "name": "angular-ionic-starter",
   "version": "0.0.1",
-  "description": "Angular Starter",
+  "description": "Kite CS : Angular Ionic Starter",
   "author": "Kemal Yalcinkaya (KiteCS)",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kemalcany/kitecs-angular-starter.git"
+    "url": "git+https://github.com/kitecs/angular-ionic-starter.git"
   },
   "scripts": {
     "postinstall": "npm run sass && npm run build:dll && node build/_postinstall",
@@ -53,8 +53,8 @@
     "compile:dev": "npm run sass && npm run clean:compile && npm run ngc && npm run build:aot:dev",
     "compile:only": "npm run clean:compile && npm run sass && npm run ngc",
     "compile:watch": "watch-run -i npm run compile:only -p 'src/app/**/*.ts, src/app/**/*.scss' npm run compile:only",
-    "sass": "node-sass src/app/theme -o src/assets/css --include-path node_modules --output-style compressed",
-    "sass:watch": "node-sass -w -r src/app/theme -o src/assets/css --include-path node_modules --output-style compressed",
+    "sass": "node-sass src/app/theme -o src/assets/css --include-path node_modules --output-style compressed -q",
+    "sass:watch": "nodemon -e scss -x npm run sass",
     "start": "npm run server:dev",
     "start:hmr": "npm run server:hmr",
     "serve80": "sudo PORT=80 node src/server/prodserver.prod",
@@ -195,7 +195,7 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kemalcany/kitecs-angular-starter/issues"
+    "url": "https://github.com/kitecs/angular-ionic-starter/issues"
   },
-  "homepage": "https://github.com/kemalcany/kitecs-angular-starter"
+  "homepage": "https://github.com/kitecs/angular-ionic-starter"
 }
