--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
+#addons:
+#  firefox: "47.0"
 language: node_js
 node_js:
   - "7.4.0"
-before_script:
+before_install:
+# - export CHROME_BIN=chromium-browser
+- export CHROME_BIN=/usr/bin/google-chrome
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
 script:
+- npm run compile
 - npm run ci
+- npm run coverage
