Universal components removed or commented out

--- a/package.json
+++ b/package.json
@@ -116,10 +116,6 @@
     "@ngrx/store": "2.2.1",
     "@ngrx/store-devtools": "3.2.3",
     "@ngrx/store-log-monitor": "3.0.2",
-    "angular2-express-engine": "2.1.0-rc.1",
-    "angular2-platform-node": "2.1.0-rc.1",
-    "angular2-universal": "2.1.0-rc.1",
-    "angular2-universal-polyfills": "2.1.0-rc.1",
     "body-parser": "1.16.1",
     "compression": "1.6.2",
     "cookie-parser": "1.4.3",
@@ -147,6 +143,7 @@
     "@types/selenium-webdriver": "~2.53.40",
     "@types/serve-static": "~1.7.31",
     "angular-router-loader": "~0.5.0",
+    "angular2-express-engine": "^2.1.0-rc.1",
     "angular2-template-loader": "~0.6.0",
     "awesome-typescript-loader": "~3.0.0-beta.17",
     "codelyzer": "^2.0.1",
