--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "url": "git+https://github.com/kitecs/angular-ionic-starter.git"
   },
   "scripts": {
-    "postinstall": "node build/_postinstall",
-    "postinsta-old": "npm run sass && npm run build:dll && node build/_postinstall",
+    "postinstall": "node build/_postinstall && npm run build:dll",
     "rimraf": "rimraf",
     "webdev": "webpack-dev-server",
     "webdev:hmr": "npm run webdev -- --inline --hot",
@@ -42,7 +41,7 @@
     "ci:testall": "npm run e2e:testall && npm run test:once:ci",
     "tslint": "node node_modules/tslint/bin/tslint",
     "lint": "npm run tslint \"src/app/**/*.ts\" ",
-    "clean": "npm cache clean && npm run clean:compile && npm run rimraf -- doc typings cordova coverage dist .awcache dll",
+    "clean": "npm run clean:compile && npm run rimraf -- doc typings cordova coverage dist .awcache dll",
     "clean:dist": "npm run rimraf -- dist .awcache",
     "clean:dll": "npm run rimraf -- dll",
     "clean:compile": "npm run rimraf -- \"compiled\" ",
@@ -96,17 +95,17 @@
     "universal:watch": "npm run build:universal && npm-run-all -p -r watch:universal server:universal"
   },
   "dependencies": {
-    "@angular/common": "4.0.0-rc.2",
-    "@angular/compiler": "4.0.0-rc.2",
-    "@angular/compiler-cli": "4.0.0-rc.2",
-    "@angular/core": "4.0.0-rc.2",
-    "@angular/forms": "4.0.0-rc.2",
-    "@angular/http": "4.0.0-rc.2",
-    "@angular/platform-browser": "4.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "4.0.0-rc.2",
-    "@angular/platform-server": "4.0.0-rc.2",
-    "@angular/router": "4.0.0-rc.2",
-    "@angular/tsc-wrapped": "4.0.0-rc.2",
+    "@angular/common": "4.0.0-rc.1",
+    "@angular/compiler": "4.0.0-rc.1",
+    "@angular/compiler-cli": "4.0.0-rc.1",
+    "@angular/core": "4.0.0-rc.1",
+    "@angular/forms": "4.0.0-rc.1",
+    "@angular/http": "4.0.0-rc.1",
+    "@angular/platform-browser": "4.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "4.0.0-rc.1",
+    "@angular/platform-server": "4.0.0-rc.1",
+    "@angular/router": "4.0.0-rc.1",
+    "@angular/tsc-wrapped": "0.5.2",
     "@angularclass/hmr": "1.2.2",
     "@angularclass/hmr-loader": "3.0.2",
     "@angularclass/idle-preload": "^1.0.4",
@@ -116,6 +115,10 @@
     "@ngrx/store": "2.2.1",
     "@ngrx/store-devtools": "3.2.3",
     "@ngrx/store-log-monitor": "3.0.2",
+    "angular2-express-engine": "2.1.0-rc.1",
+    "angular2-platform-node": "2.1.0-rc.1",
+    "angular2-universal": "2.1.0-rc.1",
+    "angular2-universal-polyfills": "2.1.0-rc.1",
     "body-parser": "1.16.1",
     "compression": "1.6.2",
     "cookie-parser": "1.4.3",
@@ -143,7 +146,6 @@
     "@types/selenium-webdriver": "~2.53.40",
     "@types/serve-static": "~1.7.31",
     "angular-router-loader": "~0.5.0",
-    "angular2-express-engine": "^2.1.0-rc.1",
     "angular2-template-loader": "~0.6.0",
     "awesome-typescript-loader": "~3.0.0-beta.17",
     "codelyzer": "^2.0.1",
