--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,20 @@
-#addons:
-#  firefox: "47.0"
+sudo: required
+dist: trusty
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
 language: node_js
 node_js:
   - "7.4.0"
-before_install:
-# - export CHROME_BIN=chromium-browser
-- export CHROME_BIN=/usr/bin/google-chrome
+before_script:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
+- sleep 3
 script:
 - npm run compile
 - npm run ci
+#- npm run test:once:ci
 - npm run coverage
