--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "test:once": "karma start",
     "test:once:ci": "karma start",
     "test": "karma start",
-    "coverage": "coveralls < ./coverage/coverage.json",
+    "coverage": "coveralls < ./coverage/lcov.info",
     "ci": "npm run e2e:jit && npm run test:once:ci",
     "ci:testall": "npm run e2e:testall && npm run test:once:ci",
     "tslint": "node node_modules/tslint/bin/tslint",
@@ -105,7 +105,7 @@
     "@angular/platform-browser-dynamic": "4.0.0-rc.1",
     "@angular/platform-server": "4.0.0-rc.1",
     "@angular/router": "4.0.0-rc.1",
-    "@angular/tsc-wrapped": "0.5.2",
+    "@angular/tsc-wrapped": "4.0.0-rc.1",
     "@angularclass/hmr": "1.2.2",
     "@angularclass/hmr-loader": "3.0.2",
     "@angularclass/idle-preload": "^1.0.4",
@@ -202,6 +202,17 @@
   },
   "greenkeeper": {
     "ignore": [
+      "@angular/common",
+      "@angular/compiler",
+      "@angular/compiler-cli",
+      "@angular/core",
+      "@angular/forms",
+      "@angular/http",
+      "@angular/platform-browser",
+      "@angular/platform-browser-dynamic",
+      "@angular/platform-server",
+      "@angular/router",
+      "@angular/tsc-wrapped",      
       "protractor"
     ]
   },
