Coveralls badge and Heroku deploy

--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "compile:watch": "watch-run -i npm run compile:only -p 'src/app/**/*.ts, src/app/**/*.scss' npm run compile:only",
     "sass": "node-sass src/app/theme -o src/assets/css --include-path node_modules --output-style compressed -q",
     "sass:watch": "nodemon -e scss -x npm run sass",
-    "start": "npm run server:dev",
+    "prestart": "npm run compile",
+    "start": "node src/server/server.prod",
+    "start:old": "npm run server:dev",
     "start:hmr": "npm run server:hmr",
     "serve80": "sudo PORT=80 node src/server/prodserver.prod",
     "server:dev": "npm-run-all -p -r webdev sass:watch",
