--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,6 @@ before_script:
 - sh -e /etc/init.d/xvfb start
 - sleep 3
 script:
-- npm run compile
+# - npm run compile
 - npm run ci
-#- npm run test:once:ci
 - npm run coverage
