--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "git+https://github.com/kitecs/angular-ionic-starter.git"
   },
   "scripts": {
-    "postinstall": "node build/_postinstall && yarn compile && yarn build:aot:prod",
+    "postinstall": "node build/_postinstall && npm run build:dll",
     "rimraf": "rimraf",
     "webdev": "webpack-dev-server",
     "webdev:hmr": "npm run webdev -- --inline --hot",
@@ -62,7 +62,8 @@
     "start:hmr": "npm run server:hmr",
     "serve80": "sudo PORT=80 node src/server/prodserver.prod",
     "server:dev": "npm-run-all -p -r webdev sass:watch",
-    "server:hmr": "npm-run-all -p -r webdev:hmr sass:watch",
+    "server:hmr": "npm run webdev:hmr",
+    "server:hmr:old": "npm-run-all -p -r webdev:hmr sass:watch",
     "server:prod": "npm-run-all -p -r watch:prod prodserver",
     "server:prod80": "npm-run-all -p -r serve80 watch:prod",
     "server:universal": "nodemon --watch dist --exec node dist/server/index.js",
@@ -148,6 +149,7 @@
     "@types/serve-static": "~1.7.31",
     "angular-router-loader": "~0.5.0",
     "angular2-template-loader": "~0.6.0",
+    "autoprefixer": "^6.7.6",
     "awesome-typescript-loader": "~3.0.0-beta.17",
     "codelyzer": "^2.0.1",
     "compression-webpack-plugin": "~0.3.1",
@@ -181,6 +183,7 @@
     "npm-run-all": "~4.0.0",
     "phantomjs-polyfill": "~0.0.2",
     "phantomjs-prebuilt": "~2.1.13",
+    "postcss-loader": "^1.3.3",
     "protractor": "5.0.0",
     "raw-loader": "~0.5.1",
     "rimraf": "~2.6.1",
@@ -213,7 +216,7 @@
       "@angular/platform-browser-dynamic",
       "@angular/platform-server",
       "@angular/router",
-      "@angular/tsc-wrapped",      
+      "@angular/tsc-wrapped",
       "protractor"
     ]
   },
