--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "webdriver:start": "npm run webdriver-manager start",
     "protractor": "protractor",
     "pree2e:only": "npm run webdriver:update -- --standalone",
-    "e2e": "npm run sass && npm-run-all -p -r e2e:server e2e:only",
+    "e2e": "npm-run-all -p -r e2e:server e2e:only",
     "e2e:testall": "npm run e2e:jit && npm run e2e:aot",
     "e2e:aot": "npm run compile:e2e && npm run e2e",
     "e2e:jit": "npm run build:prod:e2e && npm run e2e",
@@ -30,8 +30,8 @@
     "e2e:only": "npm run protractor",
     "e2e:live": "npm run e2e -- --elementExplorer",
     "e2e:server": "node src/server/server.prod",
-    "pretest": "npm run lint && npm run sass",
-    "pretest:once": "npm run lint && npm run sass",
+    "pretest": "npm run lint",
+    "pretest:once": "npm run lint",
     "pretest:once:ci": "npm run lint",
     "test:once": "karma start",
     "test:once:ci": "karma start",
@@ -48,50 +48,47 @@
     "clean:coverage": "npm run rimraf -- \"coverage\" ",
     "clean:cordova": "npm run rimraf -- cordova/www",
     "compile": "npm run compile:aot",
-    "compile:aot": "npm run sass && npm run clean:compile && npm run ngc && npm run build:aot",
-    "compile:e2e": "npm run sass && npm run clean:compile && npm run ngc && npm run build:aot:prod:e2e",
-    "compile:universal": "npm run sass && npm run clean:compile && npm run ngc:universal && npm run build:universal:aot",
-    "compile:universal:e2e": "npm run sass && npm run clean:compile && npm run ngc:universal && npm run build:universal:aot:prod:e2e",
-    "compile:dev": "npm run sass && npm run clean:compile && npm run ngc && npm run build:aot:dev",
-    "compile:only": "npm run clean:compile && npm run sass && npm run ngc",
+    "compile:aot": "npm run clean:compile && npm run ngc && npm run build:aot",
+    "compile:e2e": "npm run clean:compile && npm run ngc && npm run build:aot:prod:e2e",
+    "compile:universal": "npm run clean:compile && npm run ngc:universal && npm run build:universal:aot",
+    "compile:universal:e2e": "npm run clean:compile && npm run ngc:universal && npm run build:universal:aot:prod:e2e",
+    "compile:dev": "npm run clean:compile && npm run ngc && npm run build:aot:dev",
+    "compile:only": "npm run clean:compile && npm run ngc",
     "compile:watch": "watch-run -i npm run compile:only -p 'src/app/**/*.ts, src/app/**/*.scss' npm run compile:only",
-    "sass": "node-sass src/app/theme -o src/assets/css --include-path node_modules --output-style compressed -q",
-    "sass:watch": "nodemon -e scss -x npm run sass",
     "start": "node src/server/server.prod",
     "start:old": "npm run server:dev",
     "start:hmr": "npm run server:hmr",
     "serve80": "sudo PORT=80 node src/server/prodserver.prod",
-    "server:dev": "npm-run-all -p -r webdev sass:watch",
+    "server:dev": "npm run webdev",
     "server:hmr": "npm run webdev:hmr",
-    "server:hmr:old": "npm-run-all -p -r webdev:hmr sass:watch",
     "server:prod": "npm-run-all -p -r watch:prod prodserver",
     "server:prod80": "npm-run-all -p -r serve80 watch:prod",
     "server:universal": "nodemon --watch dist --exec node dist/server/index.js",
     "prodserver": "node src/server/server.prod",
     "debug:build": "node-nightly --inspect --debug-brk node_modules/webpack/bin/webpack.js",
     "build": "npm run build:prod",
-    "build:cordova": "npm run clean:cordova && npm run sass && webpack",
+    "build:cordova": "npm run clean:cordova && webpack",
     "build:cordova:android": "cd cordova && cordova build android && cd .. && npm run prodserver",
     "build:aot": "npm run build:aot:prod",
-    "build:aot:prod": "npm run clean:dist && npm run sass && webpack",
-    "build:aot:prod:e2e": "npm run clean:dist && npm run sass && webpack",
-    "build:aot:dev": "npm run clean:dist && npm run sass && webpack",
-    "build:dev": "npm run clean:dist && npm run sass && webpack",
-    "build:dll": "npm run clean:dll && npm run sass && webpack",
-    "build:prod": "npm run clean:dist && npm run sass && webpack",
-    "build:prod:e2e": "npm run clean:dist && npm run sass && webpack",
+    "build:aot:prod": "npm run clean:dist && webpack",
+    "build:aot:prod:e2e": "npm run clean:dist && webpack",
+    "build:aot:dev": "npm run clean:dist && webpack",
+    "build:dev": "npm run clean:dist && webpack",
+    "build:dll": "npm run clean:dll && webpack",
+    "build:prod": "npm run clean:dist && webpack",
+    "build:prod:e2e": "npm run clean:dist && webpack",
     "build:universal": "npm run build:universal:prod",
     "build:universal:aot": "npm run build:universal:aot:prod",
-    "build:universal:aot:dev": "npm run clean:dist && npm run sass && webpack",
-    "build:universal:aot:prod": "npm run clean:dist && npm run sass && webpack",
-    "build:universal:aot:prod:e2e": "npm run clean:dist && npm run sass && webpack",
-    "build:universal:dev": "npm run clean:dist && npm run sass && webpack",
-    "build:universal:prod": "npm run clean:dist && npm run sass && webpack",
-    "build:universal:prod:e2e": "npm run clean:dist && npm run sass && webpack",
+    "build:universal:aot:dev": "npm run clean:dist && webpack",
+    "build:universal:aot:prod": "npm run clean:dist && webpack",
+    "build:universal:aot:prod:e2e": "npm run clean:dist && webpack",
+    "build:universal:dev": "npm run clean:dist && webpack",
+    "build:universal:prod": "npm run clean:dist && webpack",
+    "build:universal:prod:e2e": "npm run clean:dist && webpack",
     "watch": "npm run watch:dev",
-    "watch:dev": "npm-run-all -p -r \"build:dev -- --watch\" sass:watch",
-    "watch:prod": "npm-run-all -p -r \"build:prod -- --watch\" sass:watch",
-    "watch:universal": "npm-run-all -p -r \"build:universal -- --watch\" sass:watch",
+    "watch:dev": "npm-run-all -p -r \"build:dev -- --watch\" ",
+    "watch:prod": "npm-run-all -p -r \"build:prod -- --watch\" ",
+    "watch:universal": "npm-run-all -p -r \"build:universal -- --watch\" ",
     "universal": "npm run build:universal && npm run server:universal",
     "universal:aot": "npm run compile:universal && npm run server:universal",
     "universal:watch": "npm run build:universal && npm-run-all -p -r watch:universal server:universal"
@@ -178,7 +175,6 @@
     "karma-remap-istanbul": "^0.6.0",
     "karma-sourcemap-loader": "~0.3.7",
     "karma-webpack": "~2.0.2",
-    "node-sass": "~4.5.0",
     "nodemon": "~1.11.0",
     "npm-run-all": "~4.0.0",
     "phantomjs-polyfill": "~0.0.2",
@@ -193,6 +189,7 @@
     "style-loader": "^0.13.2",
     "to-string-loader": "~1.1.5",
     "ts-helpers": "~1.1.1",
+    "ts-loader": "^2.0.1",
     "ts-node": "~2.1.0",
     "tslint": "^4.4.2",
     "tslint-loader": "^3.4.2",
