--- a/tsconfig.webpack.json
+++ b/tsconfig.webpack.json
@@ -18,9 +18,10 @@
   "exclude": [
     "node_modules",
     "compiled",
+    "cordova",
     "e2e/**/*.ts",
     "src/**/*.spec.ts",
-    "src/server.ts",
+    "src/server/server.ts",
     "src/main.browser.aot.ts",
     "src/main.browser.universal.aot.ts",
     "src/app/app.module.universal.node.ts"
