Refactoring in progress. Trying Travis

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "node_modules",
     "compiled",
     "e2e/**/*.ts",
+    "src/server/server.ts",
     "src/main.browser.universal.aot.ts",
     "src/app/app.module.universal.node.ts"
   ],
