--- a/package.json
+++ b/package.json
@@ -8,16 +8,27 @@
     "url": "git+https://github.com/kitecs/angular-ionic-starter.git"
   },
   "scripts": {
-    "rimraf": "rimraf",
     "postinstall": "node build/_postinstall && npm run build:dll",
+    "/": "------------------------DEV--------------------------",
     "dev:build:dll": "npm run clean:dll && webpack",
     "dev:start": "npm run webdev",
     "dev:start:hmr": "npm run webdev:hmr",
-    "webdev": "webpack-dev-server",
-    "webdev:hmr": "npm run webdev -- --inline --hot",
-    "webpack": "webpack",
-    "ngc": "./node_modules/.bin/ngc -p tsconfig.aot.json",
-    "ngc:universal": "./node_modules/.bin/ngc -p tsconfig.aot.universal.json",
+    "//": "-----------------------PROD-------------------------",
+    "compile": "npm run clean:compile && npm run ngc",
+    "prod:build:aot": "npm run clean:dist && webpack",
+    "prod:start": "node src/server/server.prod", 
+    "///": "-------------------TEST/E2E/CI---------------------",
+    "pretest": "npm run lint",
+    "pretest:once": "npm run lint",
+    "pretest:once:ci": "npm run lint",
+    "test:once": "karma start",
+    "test:once:ci": "karma start",
+    "test": "karma start",
+    "coverage": "coveralls < ./coverage/lcov.info",
+    "ci": "npm run e2e:jit && npm run test:once:ci",
+    "ci:testall": "npm run e2e:testall && npm run test:once:ci",
+    "tslint": "node node_modules/tslint/bin/tslint",
+    "lint": "npm run tslint \"src/app/**/*.ts\" ",
     "webdriver-manager": "webdriver-manager",
     "webdriver:update": "npm run webdriver-manager update",
     "webdriver:start": "npm run webdriver-manager start",
@@ -33,24 +44,18 @@
     "e2e:only": "npm run protractor",
     "e2e:live": "npm run e2e -- --elementExplorer",
     "e2e:server": "node src/server/server.prod",
-    "pretest": "npm run lint",
-    "pretest:once": "npm run lint",
-    "pretest:once:ci": "npm run lint",
-    "test:once": "karma start",
-    "test:once:ci": "karma start",
-    "test": "karma start",
-    "coverage": "coveralls < ./coverage/lcov.info",
-    "ci": "npm run e2e:jit && npm run test:once:ci",
-    "ci:testall": "npm run e2e:testall && npm run test:once:ci",
-    "tslint": "node node_modules/tslint/bin/tslint",
-    "lint": "npm run tslint \"src/app/**/*.ts\" ",
+    "////": "---------------------UTILS------------------------",
+    "webdev": "webpack-dev-server",
+    "webdev:hmr": "npm run webdev -- --inline --hot",
+    "webpack": "webpack",
+    "ngc": "./node_modules/.bin/ngc -p tsconfig.aot.json",
+    "ngc:universal": "./node_modules/.bin/ngc -p tsconfig.aot.universal.json",
     "clean": "npm run clean:compile && npm run rimraf -- doc typings cordova coverage dist .awcache dll",
     "clean:dist": "npm run rimraf -- dist .awcache",
     "clean:dll": "npm run rimraf -- dll",
     "clean:compile": "npm run rimraf -- \"compiled\" ",
     "clean:coverage": "npm run rimraf -- \"coverage\" ",
     "clean:cordova": "npm run rimraf -- cordova/www",
-    "compile": "npm run compile:aot",
     "compile:aot": "npm run clean:compile && npm run ngc && npm run build:aot",
     "compile:e2e": "npm run clean:compile && npm run ngc && npm run build:aot:prod:e2e",
     "compile:universal": "npm run clean:compile && npm run ngc:universal && npm run build:universal:aot",
@@ -94,7 +99,8 @@
     "watch:universal": "npm-run-all -p -r \"build:universal -- --watch\" ",
     "universal": "npm run build:universal && npm run server:universal",
     "universal:aot": "npm run compile:universal && npm run server:universal",
-    "universal:watch": "npm run build:universal && npm-run-all -p -r watch:universal server:universal"
+    "universal:watch": "npm run build:universal && npm-run-all -p -r watch:universal server:universal",
+    "rimraf": "rimraf"
   },
   "dependencies": {
     "@angular/common": "4.0.0-rc.1",
