Postinstall scripts NPM added

--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "url": "git+https://github.com/kitecs/angular-ionic-starter.git"
   },
   "scripts": {
-    "postinstall": "node build/_postinstall && npm run build:dll",
+    "postinstall": "node hooks/_postinstall",
     "/": "------------------------DEV--------------------------",
-    "dev:build:dll": "npm run clean:dll && webpack",
+    "dev:build:dll": "npm run clean:dll && webpack",   
     "dev:start": "npm run webdev",
     "dev:start:hmr": "npm run webdev:hmr",
     "//": "-----------------------PROD-------------------------",
-    "compile": "npm run clean:compile && npm run ngc",
-    "prod:build:aot": "npm run clean:dist && webpack",
-    "prod:start": "node src/server/server.prod", 
+    "prod:compile": "npm run clean:compile && npm run ngc",
+    "prod:build:web": "npm run clean:dist && webpack",
+    "prod:build:cordova": "npm run clean:cordova && webpack",     
+    "prod:build:ios": "cd cordova && cordova build ios && cd ..", 
+    "prod:build:android": "cd cordova && cordova build android && cd ..", 
+    "prod:start": "node src/server/server.prod",
     "///": "-------------------TEST/E2E/CI---------------------",
     "pretest": "npm run lint",
     "pretest:once": "npm run lint",
@@ -184,6 +187,7 @@
     "karma-remap-istanbul": "^0.6.0",
     "karma-sourcemap-loader": "~0.3.7",
     "karma-webpack": "~2.0.2",
+    "node-sass": "^4.5.0",
     "nodemon": "~1.11.0",
     "npm-run-all": "~4.0.0",
     "phantomjs-polyfill": "~0.0.2",
