Heroku SCSS fix

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prod:build:cordova": "npm run clean:cordova && webpack",     
     "prod:build:ios": "cd cordova && cordova build ios && cd ..", 
     "prod:build:android": "cd cordova && cordova build android && cd ..", 
-    "prod:start": "node src/server/server.prod",
+    "prod:start": "node src/server/server.prod.js",
     "///": "-------------------TEST/E2E/CI---------------------",
     "pretest": "npm run lint",
     "pretest:once": "npm run lint",
@@ -66,16 +66,14 @@
     "compile:dev": "npm run clean:compile && npm run ngc && npm run build:aot:dev",
     "compile:only": "npm run clean:compile && npm run ngc",
     "compile:watch": "watch-run -i npm run compile:only -p 'src/app/**/*.ts, src/app/**/*.scss' npm run compile:only",
-    "start": "node src/server/server.prod",
+    "start:abbas": "node src/server/server.prod",
     "start:old": "npm run server:dev",
     "start:hmr": "npm run server:hmr",
-    "serve80": "sudo PORT=80 node src/server/prodserver.prod",
     "server:dev": "npm run webdev",
     "server:hmr": "npm run webdev:hmr",
     "server:prod": "npm-run-all -p -r watch:prod prodserver",
     "server:prod80": "npm-run-all -p -r serve80 watch:prod",
     "server:universal": "nodemon --watch dist --exec node dist/server/index.js",
-    "prodserver": "node src/server/server.prod",
     "debug:build": "node-nightly --inspect --debug-brk node_modules/webpack/bin/webpack.js",
     "build": "npm run build:prod",
     "build:cordova": "npm run clean:cordova && webpack",
