--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   "scripts": {
     "postinstall": "node hooks/postinstall",
     "/": "------------------------DEV--------------------------",
-    "dev:build:dll": "npm run clean:dll && webpack",   
+    "dev:build:dll": "npm run clean:dll && webpack",
     "dev:start": "npm run webdev",
     "dev:start:hmr": "npm run webdev:hmr",
     "//": "-----------------------PROD-------------------------",
     "prod:compile": "npm run clean:compile && npm run ngc",
     "prod:build:web": "npm run clean:dist && webpack",
-    "prod:build:cordova": "npm run clean:cordova && webpack",     
-    "prod:build:ios": "cd cordova && cordova build ios && cd ..", 
-    "prod:build:android": "cd cordova && cordova build android && cd ..", 
+    "prod:build:cordova": "npm run clean:cordova && webpack",
+    "prod:build:ios": "cd cordova && cordova build ios && cd ..",
+    "prod:build:android": "cd cordova && cordova build android && cd ..",
     "prod:start": "node src/server/server.prod.js",
     "///": "-------------------TEST/E2E/CI---------------------",
     "pretest": "npm run lint",
@@ -166,6 +166,7 @@
     "css-loader": "~0.26.2",
     "es6-promise": "~4.0.5",
     "es6-promise-loader": "~1.0.2",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "fs-extra": "^2.0.0",
     "fs-promise": "^2.0.0",
@@ -231,7 +232,7 @@
   "engines": {
     "node": ">= 7.4.0",
     "npm": ">= 4.1.2"
-  },    
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/kitecs/angular-ionic-starter/issues"
