Updates part I complete

--- a/package.json
+++ b/package.json
@@ -23,13 +23,11 @@
     "///": "-------------------TEST/E2E/CI---------------------",
     "pretest": "npm run lint",
     "pretest:once": "npm run lint",
-    "pretest:once:ci": "npm run lint",
     "test:once": "karma start",
-    "test:once:ci": "karma start",
     "test": "karma start",
     "coverage": "coveralls < ./coverage/lcov.info",
-    "ci": "npm run e2e:jit && npm run test:once:ci",
-    "ci:testall": "npm run e2e:testall && npm run test:once:ci",
+    "ci": "npm run e2e:aot && npm run test:once",
+    "ci:testall": "npm run e2e:testall && npm run test:once",
     "tslint": "node node_modules/tslint/bin/tslint",
     "lint": "npm run tslint \"src/app/**/*.ts\" ",
     "webdriver-manager": "webdriver-manager",
@@ -157,14 +155,14 @@
     "angular-router-loader": "~0.5.0",
     "angular2-template-loader": "~0.6.0",
     "autoprefixer": "^6.7.6",
-    "awesome-typescript-loader": "~3.0.0-beta.17",
+    "awesome-typescript-loader": "~3.1.2",
     "codelyzer": "^2.0.1",
     "compression-webpack-plugin": "~0.3.1",
     "copy-webpack-plugin": "~4.0.0",
     "cordova": "^6.5.0",
     "coveralls": "^2.11.16",
     "css-loader": "~0.26.2",
-    "es6-promise": "~4.0.5",
+    "es6-promise": "~4.1.0",
     "es6-promise-loader": "~1.0.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
@@ -195,7 +193,7 @@
     "protractor": "5.0.0",
     "raw-loader": "~0.5.1",
     "rimraf": "~2.6.1",
-    "sass-loader": "^6.0.2",
+    "sass-loader": "6.0.3",
     "source-map-loader": "~0.1.5",
     "string-replace-loader": "~1.0.5",
     "style-loader": "^0.13.2",
@@ -211,7 +209,7 @@
     "webpack-bundle-analyzer": "^2.1.1",
     "webpack-dev-middleware": "~1.10.1",
     "webpack-dev-server": "2.4.1",
-    "webpack-merge": "~3.0.0"
+    "webpack-merge": "~4.0.0"
   },
   "greenkeeper": {
     "ignore": [
