--- a/package.json
+++ b/package.json
@@ -126,11 +126,11 @@
     "angular2-platform-node": "2.1.0-rc.1",
     "angular2-universal": "2.1.0-rc.1",
     "angular2-universal-polyfills": "2.1.0-rc.1",
-    "body-parser": "1.16.1",
+    "body-parser": "1.17.1",
     "compression": "1.6.2",
     "cookie-parser": "1.4.3",
     "core-js": "2.4.1",
-    "express": "4.14.1",
+    "express": "4.15.2",
     "ionic-angular": "^2.1.0",
     "ionicons": "^3.0.0",
     "methods": "1.1.2",
@@ -150,13 +150,13 @@
     "@types/jasmine": "2.5.43",
     "@types/mime": "~0.0.29",
     "@types/node": "~7.0.5",
-    "@types/selenium-webdriver": "~2.53.40",
+    "@types/selenium-webdriver": "~3.0.0",
     "@types/serve-static": "~1.7.31",
     "angular-router-loader": "~0.5.0",
     "angular2-template-loader": "~0.6.0",
     "autoprefixer": "^6.7.6",
     "awesome-typescript-loader": "~3.1.2",
-    "codelyzer": "^2.0.1",
+    "codelyzer": "^3.0.0-beta.3",
     "compression-webpack-plugin": "~0.3.1",
     "copy-webpack-plugin": "~4.0.0",
     "cordova": "^6.5.0",
