Eslint added, npm scripts reorganized, most of them deleted

--- a/app.json
+++ b/app.json
@@ -5,10 +5,10 @@
   },
   "env": {
     "NODE_MODULES_CACHE": {
-      "required": true
+      "required": false
     },
     "NPM_CONFIG_PRODUCTION": {
-      "required": true
+      "required": false
     }
   },
   "formation": {
