--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ before_script:
 - sh -e /etc/init.d/xvfb start
 - sleep 3
 script:
-- npm run ci
-- npm run coverage
+- npm run test:ci
+- npm run test:coverage
