Refactoring on components

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "pree2e:only": "npm run webdriver:update -- --standalone",
     "e2e": "npm-run-all -p -r e2e:server e2e:only",
     "e2e:testall": "npm run e2e:jit && npm run e2e:aot",
-    "e2e:aot": "npm run clean:compile && npm run utils:ngc && npm run build:aot:prod:e2e && npm run e2e",
+    "e2e:aot": "npm run clean:compile && npm run utils:ngc && npm run prod:build:web && npm run e2e",
+    "e2e:aot:old": "npm run clean:compile && npm run utils:ngc && npm run build:aot:prod:e2e && npm run e2e",
     "e2e:jit": "npm run build:prod:e2e && npm run e2e",
     "e2e:only": "npm run protractor",
     "e2e:live": "npm run e2e -- --elementExplorer",
