--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
       "required": false
     },
     "NPM_CONFIG_PRODUCTION": {
-      "required": true
+      "required": false
     }
   },
   "formation": {
