refactor(src): move polyfills to config and assets and theme in src/app

--- a/tsconfig.webpack.json
+++ b/tsconfig.webpack.json
@@ -22,9 +22,7 @@
     "e2e/**/*.ts",
     "src/**/*.spec.ts",
     "src/server/server.ts",
-    "src/main.browser.aot.ts",
-    "src/main.browser.universal.aot.ts",
-    "src/app/app.module.universal.node.ts"
+    "src/main.browser.aot.ts"
   ],
   "awesomeTypescriptLoaderOptions": {
     "useWebpackText": true,
