--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "prod:build:cordova": "npm run clean:cordova && webpack",
     "prod:build:ios": "cd cordova && cordova build ios && cd ..",
     "prod:build:android": "cd cordova && cordova build android && cd ..",
-    "prod:start": "node src/server/server.prod.js",
+    "prod:start": "node src/server/server.js",
     "lint": "npm-run-all lint:*",
     "lint:ts": "node node_modules/tslint/bin/tslint \"src/app/**/*.ts\" ",
     "lint:js": "./node_modules/.bin/eslint \"src/app/**/*.js\" ",
@@ -43,7 +43,7 @@
     "e2e:jit": "npm run build:prod:e2e && npm run e2e",
     "e2e:only": "npm run protractor",
     "e2e:live": "npm run e2e -- --elementExplorer",
-    "e2e:server": "node src/server/server.prod",
+    "e2e:server": "node src/server/server",
     "utils:rimraf": "rimraf",
     "utils:webdev": "webpack-dev-server",
     "utils:webdev:hmr": "npm run utils:webdev -- --inline --hot",
