--- a/package.json
+++ b/package.json
@@ -133,7 +133,7 @@
     "karma-remap-coverage": "~0.1.4",
     "karma-remap-istanbul": "^0.6.0",
     "karma-sourcemap-loader": "~0.3.7",
-    "karma-webpack": "~2.0.3",
+    "karma-webpack": "~2.0.2",
     "node-sass": "^4.5.0",
     "nodemon": "~1.11.0",
     "npm-run-all": "~4.0.0",
@@ -174,7 +174,8 @@
       "@angular/platform-server",
       "@angular/router",
       "@angular/tsc-wrapped",
-      "protractor"
+      "protractor",
+      "karma-webpack"
     ]
   },
   "engines": {
