--- a/package.json
+++ b/package.json
@@ -134,7 +134,7 @@
     "karma-remap-coverage": "~0.1.4",
     "karma-remap-istanbul": "^0.6.0",
     "karma-sourcemap-loader": "~0.3.7",
-    "karma-webpack": "~2.0.2",
+    "karma-webpack": "~2.0.3",
     "node-sass": "^4.5.0",
     "nodemon": "~1.11.0",
     "npm-run-all": "~4.0.0",
@@ -175,8 +175,7 @@
       "@angular/platform-server",
       "@angular/router",
       "@angular/tsc-wrapped",
-      "protractor",
-      "karma-webpack"
+      "protractor"
     ]
   },
   "engines": {
