--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "methods": "1.1.2",
     "ngrx-store-freeze": "0.1.9",
     "rxjs": "5.2.0",
-    "zone.js": "0.8.4"
+    "zone.js": "0.8.3"
   },
   "devDependencies": {
     "@types/body-parser": "~1.16.0",
@@ -174,7 +174,9 @@
       "@angular/platform-server",
       "@angular/router",
       "@angular/tsc-wrapped",
-      "protractor"
+      "protractor",
+      "zone-js",
+      "types@jasmine"
     ]
   },
   "engines": {
