--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "utils:webdev": "webpack-dev-server",
     "utils:webdev:hmr": "npm run utils:webdev -- --inline --hot",
     "utils:webpack": "webpack",
-    "utils:compodoc": "./node_modules/.bin/compodoc src -p ./tsconfig.json -d docs"
+    "utils:compodoc": "./node_modules/.bin/compodoc src -p ./tsconfig.json -d docs",
+    "utils:ionic:upload": "cd cordova && ionic upload && cd .."
   },
   "dependencies": {
     "@angular/common": "4.0.0-rc.1",
@@ -118,7 +119,7 @@
     "eslint-config-google": "^0.7.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
-    "fs-extra": "^2.1.1",
+    "fs-extra": "~2.1.1",
     "fs-promise": "^2.0.0",
     "html-webpack-plugin": "~2.28.0",
     "imports-loader": "~0.7.1",
@@ -151,14 +152,14 @@
     "style-loader": "^0.14.0",
     "to-string-loader": "~1.1.5",
     "ts-helpers": "~1.1.1",
-    "ts-loader": "^2.0.1",
+    "ts-loader": "~2.0.1",
     "ts-node": "~2.1.0",
     "tslint": "4.5.1",
     "tslint-loader": "^3.4.2",
     "typescript": "2.2.1",
     "watch-run": "~1.2.4",
     "webpack": "2.2.1",
-    "webpack-bundle-analyzer": "^2.1.1",
+    "webpack-bundle-analyzer": "~2.1.1",
     "webpack-dev-middleware": "~1.10.1",
     "webpack-dev-server": "2.4.2",
     "webpack-merge": "~4.1.0"
