--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@angular/tsc-wrapped": "4.0.0-rc.1",
     "@angularclass/hmr": "1.2.2",
     "@angularclass/hmr-loader": "3.0.2",
-    "@angularclass/idle-preload": "^1.0.4",
+    "@angularclass/idle-preload": "1.0.4",
     "@ngrx/core": "1.2.0",
     "@ngrx/effects": "2.0.1",
     "@ngrx/router-store": "1.2.5",
@@ -82,7 +82,7 @@
     "cookie-parser": "1.4.3",
     "core-js": "2.4.1",
     "express": "4.15.2",
-    "ionic-angular": "^2.1.0",
+    "ionic-angular": "2.1.0",
     "ionicons": "^3.0.0",
     "methods": "1.1.2",
     "ngrx-store-freeze": "0.1.9",
@@ -106,21 +106,21 @@
     "angular2-template-loader": "~0.6.0",
     "autoprefixer": "^6.7.7",
     "awesome-typescript-loader": "~3.1.2",
-    "codelyzer": "^3.0.0-beta.3",
+    "codelyzer": "3.0.0-beta.3",
     "compodoc": "0.0.41",
     "compression-webpack-plugin": "~0.3.1",
     "copy-webpack-plugin": "~4.0.0",
-    "cordova": "^6.5.0",
-    "coveralls": "^2.11.16",
+    "cordova": "6.5.0",
+    "coveralls": "2.11.16",
     "css-loader": "~0.27.3",
     "es6-promise": "~4.1.0",
     "es6-promise-loader": "~1.0.2",
-    "eslint": "^3.17.1",
+    "eslint": "3.17.1",
     "eslint-config-google": "^0.7.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.10.1",
+    "extract-text-webpack-plugin": "2.1.0",
+    "file-loader": "0.10.1",
     "fs-extra": "~2.1.1",
-    "fs-promise": "^2.0.0",
+    "fs-promise": "2.0.0",
     "html-webpack-plugin": "~2.28.0",
     "imports-loader": "~0.7.1",
     "ip": "~1.1.3",
@@ -129,12 +129,12 @@
     "karma": "~1.5.0",
     "karma-chrome-launcher": "~2.0.0",
     "karma-coverage": "~1.1.1",
-    "karma-firefox-launcher": "^1.0.0",
+    "karma-firefox-launcher": "1.0.0",
     "karma-jasmine": "~1.1.0",
     "karma-mocha-reporter": "~2.2.0",
     "karma-phantomjs-launcher": "~1.0.4",
     "karma-remap-coverage": "~0.1.4",
-    "karma-remap-istanbul": "^0.6.0",
+    "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "~0.3.7",
     "karma-webpack": "~2.0.3",
     "node-sass": "^4.5.0",
@@ -142,7 +142,7 @@
     "npm-run-all": "~4.0.0",
     "phantomjs-polyfill": "~0.0.2",
     "phantomjs-prebuilt": "~2.1.13",
-    "postcss-loader": "^1.3.3",
+    "postcss-loader": "1.3.3",
     "protractor": "5.0.0",
     "raw-loader": "~0.5.1",
     "rimraf": "~2.6.1",
