--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "cookie-parser": "1.4.3",
     "core-js": "2.4.1",
     "express": "4.15.2",
-    "ionic-angular": "^2.1.0",
+    "ionic-angular": "2.2.0",
     "ionicons": "^3.0.0",
     "methods": "1.1.2",
     "ngrx-store-freeze": "0.1.9",
